ansible/configs/kubernetes/cluster/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: proxy
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/proxy: "true"
  podSelector:
    matchLabels:
      network/proxy: "true"
